--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /AdventOfCode6/nbproject/private/
 /AdventOfCode6/build/
+/AdventOfCode7/nbproject/private/
+/AdventOfCode8/nbproject/private/
+/AdventOfCode8/build/
