--- a/AdventOfCode1/nbproject/private/private.properties
+++ b/AdventOfCode1/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Creon\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\Micha\\AppData\\Roaming\\NetBeans\\18\\build.properties
